# ALU-With-GUI-Application

./: CMakeLists.txt  README.md  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui
ALU_MODULE/: ALU.v  ALU_TB.sv
dpi/: dpi_alu.cpp
media/: demo.mkv
